--- a/web/src/App.css
+++ b/web/src/App.css
@@ -19,3 +19,27 @@
     margin-bottom: 10px;
     word-wrap: break-word;
 }
+/* #num{
+    word-wrap: break-word;
+} */
+@media screen and (max-width: 320px) {
+    .card {
+      width: 75%;
+    }
+  }
+@media screen and (max-width: 500px) and (min-width: 321px) {
+    .card {
+      width: 50%;
+    }
+  }
+
+@media screen and (max-width: 620px) and (min-width: 501px) {
+    .card {
+      width: 40%;
+    }
+  }
+@media screen and (max-width: 900px) and (min-width: 621px) {
+    .card {
+      width: 30%;
+    }
+  }
